--- a/LogTest/LogComponent.csproj
+++ b/LogTest/LogComponent.csproj
@@ -41,8 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncLog.cs" />
+    <Compile Include="IDateTime.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="LogLine.cs" />
+    <Compile Include="LogWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
